--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,7 @@
 @import "Base";
 @import "../sections/Header";
+@import "../sections/Hero";
+@import "../sections/Partners";
 body {
   background: #1C121F;
 }
