--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -87,6 +87,7 @@ header.header {
   position: fixed;
   width: 100vw;
   top: 0;
+  z-index: 10;
 }
 header.header nav.header-menu {
   display: flex;
@@ -119,6 +120,138 @@ header.header nav.header-menu a:hover {
 }
 header.header nav.header-menu a:hover::after {
   transform: scaleX(1);
+}
+
+.hero {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 60px;
+  margin-bottom: 200px;
+}
+.hero .left-part,
+.hero .right-part {
+  flex: 1;
+  width: 50%;
+}
+.hero .left-part {
+  padding: 265px 40px 8px 20px;
+  display: flex;
+  flex-direction: column;
+}
+.hero .left-part .top-part {
+  margin-bottom: 120px;
+}
+.hero .left-part .top-part h1 {
+  font-weight: 700;
+  font-size: 85px;
+  line-height: 153%;
+  color: #f5fbf2;
+  padding-bottom: 75px;
+}
+.hero .left-part .top-part h1 span {
+  color: #ffce4e;
+}
+.hero .left-part .top-part .buttons {
+  display: flex;
+  gap: 48px;
+}
+.hero .left-part .bottom-part {
+  display: flex;
+  gap: 100px;
+}
+.hero .left-part .bottom-part .stat-number {
+  display: flex;
+  flex-direction: column;
+}
+.hero .left-part .bottom-part .stat-number strong {
+  font-weight: 700;
+  font-size: 62px;
+  color: #f5fbf2;
+}
+.hero .left-part .bottom-part .stat-number span {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 148%;
+  color: #9b9e9a;
+}
+.hero .right-part {
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
+  background: rgba(79, 70, 78, 0.45);
+  padding: 240px 0 100px 60px;
+}
+.hero .right-part .auction-card {
+  width: 556px;
+  display: flex;
+  flex-direction: column;
+}
+.hero .right-part .auction-card .top-part {
+  padding: 25px 22px 0 22px;
+  display: flex;
+  justify-content: flex-start;
+  background: url("../assets/images/banners/Group 36652.png");
+  height: 576px;
+}
+.hero .right-part .auction-card .top-part .info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 100%;
+  -webkit-backdrop-filter: blur(45px);
+          backdrop-filter: blur(45px);
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.12);
+  background: linear-gradient(145deg, rgba(255, 137, 61, 0.09) 0%, rgba(250, 250, 250, 0.65) 100%);
+  opacity: 0.95;
+}
+.hero .right-part .auction-card .top-part .info .info-cell {
+  display: flex;
+  flex-direction: column;
+}
+.hero .right-part .auction-card .top-part .info .info-cell .name {
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.08em;
+  text-transform: capitalize;
+  color: #e4dee7;
+}
+.hero .right-part .auction-card .top-part .info .info-cell .value {
+  font-weight: 700;
+  font-size: 32px;
+  color: #fff;
+}
+.hero .right-part .auction-card .bottom-part {
+  width: 100%;
+  height: 142px;
+  background-color: white;
+  padding: 0 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.hero .right-part .auction-card .bottom-part .name {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.hero .right-part .auction-card .bottom-part .name span:first-child {
+  font-weight: 600;
+  font-size: 28px;
+  letter-spacing: 0.07em;
+  color: #16091b;
+}
+.hero .right-part .auction-card .bottom-part .name span:last-child {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 148%;
+  color: #594d5e;
+}
+.hero .right-part .auction-card .bottom-part .start-bit button {
+  font-weight: 700;
+  font-size: 24px;
+  color: #000;
 }
 
 body {
