--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
 @import "../sections/Header";
 @import "../sections/Hero";
 @import "../sections/Partners";
+@import "../sections/Auctions";
 body {
-  background: #1C121F;
+  background: #1C121F;  
 }
