--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,8 @@
 @import "../sections/Hero";
 @import "../sections/Partners";
 @import "../sections/Auctions";
+@import "../components/Heading";
+
 body {
   background: #1C121F;  
 }
