Feature: Some components

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,6 +4,7 @@
 @import "../sections/Partners";
 @import "../sections/Auctions";
 @import "../components/Heading";
+@import "../sections/HowItWorks";
 
 body {
   background: #1C121F;  
