--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -418,6 +418,25 @@ header.header nav.header-menu a:hover::after {
   --buble-color: attr(data-buble-color);
 }
 
+.how-it-works {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.how-it-works .steps {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.how-it-works .steps .step {
+  display: flex;
+  flex-direction: column;
+}
+.how-it-works .steps .step img {
+  padding: 30px;
+  border-radius: 100%;
+  background-color: #372839;
+}
 body {
   background: #1C121F;
 }/*# sourceMappingURL=App.css.map */
